feat: upload modified EDA file add make train_month.csv

--- a/notebooks/1_EDA/EDA_moongs95_v1.ipynb
+++ b/notebooks/1_EDA/EDA_moongs95_v1.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c87cd35c-fe60-47fb-897e-04af362b626d",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "968d268a-f688-42ba-82df-c02993f5c1c2",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f0b53b09-fe06-4363-9f3f-be1e6be3bac4",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "4  FTSVTTSR  2022      1  1.0     1  2529  248000.0       0.0  143004.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "0968bc0c-f79f-4bf9-bd8d-4434dd9b6efd",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
        "4        DEWLVASR          XMKRPGLB  999999999"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "7f196af9-bb22-410d-b14f-f7dadf3e7a0d",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "70e29a63-29c7-4e3f-a6e4-fea1bf1772e7",
    "metadata": {},
    "outputs": [
@@ -416,7 +416,7 @@
        "4         29  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "7b9ec78d-b266-410e-9603-95380f2305f0",
    "metadata": {},
    "outputs": [
@@ -647,7 +647,7 @@
        "[7431 rows x 10 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "64c3fb0c-02d1-498e-a34b-78d365ccdc08",
    "metadata": {},
    "outputs": [],
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "7f38528c-de14-4899-99c5-4c972b35f1aa",
    "metadata": {},
    "outputs": [
@@ -897,7 +897,7 @@
        "[3776 rows x 10 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,12 +908,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "cb060218-3618-43f3-840d-9b1852056800",
    "metadata": {},
    "outputs": [],
    "source": [
     "df = df_month.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "15f10619",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('train_month.csv', index=False, encoding='utf-8')"
    ]
   },
   {
@@ -2636,9 +2646,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "trade_project",
+   "display_name": "dacon_trade_project",
    "language": "python",
-   "name": "dacon_trade_project"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
